<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/gradient"
    tools:context=".Home">

    <Button
        android:id="@+id/changeMyLang"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/menu"
    />

    <ImageView
        android:id="@+id/cloud"
        android:layout_width="280dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="150dp"
        android:layout_marginEnd="99dp"
        android:alpha="0.7"
        android:src="@drawable/cloud" />

    <ImageView
        android:id="@+id/freshair"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:src="@drawable/freshair" />

    <ImageView
        android:id="@+id/house"
        android:layout_width="360dp"
        android:layout_height="230dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="35dp"
        android:alpha="0.5"
        android:src="@drawable/house" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:text="@string/sign_in"
        android:layout_marginTop="410dp"
        android:layout_centerHorizontal="true"
        android:alpha="0.9"
        android:backgroundTint="@color/babypurple"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="22sp"
        android:backgroundTint="@color/babypurple"
        android:textColor="@color/purple" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="570dp"
        android:text="@string/continue_with_google"
        android:textColor="@color/purple"
        android:backgroundTint="@color/babypurple"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_your_password"
        android:backgroundTint="@color/background4"
        android:alpha="0.5"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:textStyle="italic" />

</RelativeLayout>