<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Graph"
    android:background="@color/background">
    <ImageView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:alpha="0.001"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/menu">
    </ImageView>
    <ImageView
        android:id="@+id/houseImg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="200dp"
        android:alpha="0.6"
        android:src="@drawable/house">
    </ImageView>
    <RelativeLayout
        android:id="@+id/edittext"
        android:layout_below="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <RelativeLayout
            android:id="@+id/relative_attribute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/attribute"
                android:textSize="20sp" />
            <Spinner
                android:layout_below="@+id/text_attribute"
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/spinner" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@+id/relative_attribute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <RelativeLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/text_timeframe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="@string/timeframe"
                    android:textSize="20sp" />
                <Spinner
                    android:layout_below="@+id/text_timeframe"
                    android:id="@+id/spinner_timeframe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/spinner"
                    android:textSize="40sp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_alignParentRight="true"
                android:layout_width="140dp"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/text_ending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="@string/ending"
                    android:textSize="20sp" />
                <Spinner
                    android:layout_below="@+id/text_ending"
                    android:id="@+id/spinner_ending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/spinner"
                    android:textSize="40sp"/>
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/show"
        android:layout_centerHorizontal="true"
        android:alpha="0.9"
        android:layout_below="@+id/edittext"
        android:backgroundTint="@color/babypurple"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:textSize="22sp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_above="@+id/name_graph"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" />
    <TextView
        android:id="@+id/name_graph"
        android:textSize="25dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bar"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <Button
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/home"
            android:text="Home"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_map"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/map"
            android:text="Map"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/dashboard"
            android:text="Graph"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/logout"
            android:text="Log out"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:id="@+id/changeMyLang"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/menu"
        android:backgroundTint="#FFFFFF" />
</RelativeLayout>